--- a/department-service/pom.xml
+++ b/department-service/pom.xml
@@ -18,6 +18,7 @@
 	<org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
 	<org.projectlombok.version>1.18.20</org.projectlombok.version>
 	<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+	<spring-cloud.version>2021.0.5</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -27,6 +28,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
 		<dependency>
@@ -50,6 +55,18 @@
 			<version>${org.mapstruct.version}</version>
 		</dependency>
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
