--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=Julia917
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.application.name=DEPARTMENT-SERVICE
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
