--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 server.port=8081
+spring.application.name=EMPLOYEE-SERVICE
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
