--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,6 +3,13 @@ spring.application.name=API-GATEWAY
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 management.endpoints.web.exposure.include=*
 
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+## Now the route should be http://localhost:9191/employee-service/api/employees and
+## http://localhost:9191/department-service/api/departments
+#logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping=DEBUG
+##Loggin to see the mapping routes
+
 ## Routes for Employee Service
 spring.cloud.gateway.routes[0].id=EMPLOYEE-SERVICE
 spring.cloud.gateway.routes[0].uri.=lb://EMPLOYEE-SERVICE
@@ -13,6 +20,6 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/employees/**
 ## Routes for Department Service
 spring.cloud.gateway.routes[1].id=DEPARTMENT-SERVICE
 spring.cloud.gateway.routes[1].uri.=lb://DEPARTMENT-SERVICE
-#instead use lb uri you can write the URL.
+#instead use load balance (lb) uri you can write the URL.
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
 #With this predicate path, the request is routing by http://localhost:9191/api/departments
