--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -7,4 +7,5 @@
 
 spring.application.name=DEPARTMENT-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
+management.endpoints.web.exposure.include=*
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
