--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.cloud.gateway.routes[1].uri.=lb://DEPARTMENT-SERVICE
 #instead use load balance (lb) uri you can write the URL.
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
 #With this predicate path, the request is routing by http://localhost:9191/api/departments
+
+spring.zipkin.base-url=http://127.0.0.1:9411/
+spring.sleuth.sampler.probability=1.0
