--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.application.name=DEPARTMENT-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
 management.endpoints.web.exposure.include=*
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+spring.zipkin.base-url=http://127.0.0.1:9411/
+spring.sleuth.sampler.probability=1.0
