Retry pattern added, fix dependency for Mac users.

--- a/employee-service/pom.xml
+++ b/employee-service/pom.xml
@@ -30,6 +30,12 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-resolver-dns-native-macos</artifactId>
+			<version>4.1.86.Final</version>
+			<classifier>osx-aarch_64</classifier>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
