--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -36,4 +36,9 @@ resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.permittedNumberOfCallsInH
 resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.slidingWindowSize=10
 resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.slidingWindowType=COUNT_BASED
 
+# Retry Configuration
+resilience4j.retry.instances.EMPLOYEE-SERVICE.registerHealthIndicator=true
+resilience4j.retry.instances.EMPLOYEE-SERVICE.max-attempts=5
+resilience4j.retry.instances.EMPLOYEE-SERVICE.wait-duration=1s
+
 
