--- a/organization-services/src/main/resources/application.properties
+++ b/organization-services/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #
 server.port=8083
 #
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-#
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+spring.application.name=ORGANIZATION-SERVICE
+
 #spring.boot.message = Hello, Employee Service Spring Cloud Bus Demo
