--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -24,5 +24,11 @@ spring.cloud.gateway.routes[1].uri.=lb://DEPARTMENT-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
 #With this predicate path, the request is routing by http://localhost:9191/api/departments
 
+## Route for Organization Service
+spring.cloud.gateway.routes[2].id=ORGANIZATION-SERVICE
+spring.cloud.gateway.routes[2].uri.=lb://ORGANIZATION-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organizations/**
+
+
 spring.zipkin.base-url=http://127.0.0.1:9411/
 spring.sleuth.sampler.probability=1.0
