--- a/organization-services/src/main/resources/application.properties
+++ b/organization-services/src/main/resources/application.properties
@@ -1,14 +1,24 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/organization_db?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Julia917
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#
-server.port=8083
-#
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#spring.datasource.url=jdbc:mysql://localhost:3306/organization_db?createDatabaseIfNotExist=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=Julia917
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+##
+#server.port=8083
+##
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
+#CONFIG-SERVER
 spring.application.name=ORGANIZATION-SERVICE
-
+spring.config.import=optional:configserver:http://localhost:8888
 #spring.boot.message = Hello, Employee Service Spring Cloud Bus Demo
+
+# Rabbitmq Config
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Actuator for Circuit Breaker
+management.endpoints.web.exposure.include=*
