Organization Microservice Done.

--- a/organization-services/src/main/resources/application.properties
+++ b/organization-services/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.rabbitmq.password=guest
 
 # Actuator for Circuit Breaker
 management.endpoints.web.exposure.include=*
+
+# Distributed Tracing Config
+spring.zipkin.base-url=http://127.0.0.1:9411/
