--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -29,6 +29,6 @@ spring.cloud.gateway.routes[2].id=ORGANIZATION-SERVICE
 spring.cloud.gateway.routes[2].uri.=lb://ORGANIZATION-SERVICE
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organizations/**
 
-
+# Distributed Tracing Config
 spring.zipkin.base-url=http://127.0.0.1:9411/
 spring.sleuth.sampler.probability=1.0
