--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -32,3 +32,8 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organizations/**
 # Distributed Tracing Config
 spring.zipkin.base-url=http://127.0.0.1:9411/
 spring.sleuth.sampler.probability=1.0
+
+# Spring Cloud CORS Config
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET, POST, PUT, DELETE
+
